# three-style

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: commutator.rs  cube.rs  cubie.rs  error.rs  facelet.rs  finder.rs  lib.rs  moves.rs  state.rs  sticker.rs
src/commutator/: finder.rs  mod.rs  types.rs
src/error/: mod.rs
src/facelet/: moves.rs  state.rs
src/moves/: alg.rs  core.rs  mod.rs
src/sticker/: constants.rs
three-style-cli/: Cargo.toml
three-style-cli/src/: main.rs
three-style-lib/: Cargo.toml
three-style-lib/src/commutator/: finder.rs  types.rs
three-style-lib/src/error/: mod.rs
three-style-lib/src/facelet/: mod.rs  moves.rs  state.rs  types.rs
three-style-lib/src/moves/: alg.rs  core.rs
three-style-lib/src/sticker/: constants.rs  mod.rs
three-style-wasm/: Cargo.toml
three-style-wasm/src/: lib.rs
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css  main.tsx
web/src/components/: AlgPanel.tsx  Cube.tsx  MainContainer.tsx  Navbar.tsx
web/src/context/: PlayerContext.tsx  ThemeContext.tsx
web/src/utils/: constants.ts
