[package]
name = "three-style"
version = "0.1.1"
edition = "2021"
description = "A CLI tool for searching 3x3 Rubiks'cube 3-style commutators"
authors = ["LIOKA Ranraison Fiderana <luckasranarison@gmail.com>"]
repository = "https://github.com/luckasRanarison/three-style"
keywords = ["rubiks-cube", "three-style", "commutators", "algorithms"]
categories = ["algorithms"]
license = "MIT"
readme = "../README.md"

[dependencies]
clap = { version = "4.5.1", features = ["derive", "color"] }
three-style-lib = "0.1.2"
