[package]
name = "three-style-wasm"
version = "0.1.0"
edition = "2021"
description = "three-style-lib WASM bindings"
authors = ["LIOKA Ranraison Fiderana <luckasranarison@gmail.com>"]
repository = "https://github.com/luckasRanarison/three-style"
keywords = ["rubiks-cube", "three-style", "commutators", "algorithms"]
categories = ["algorithms"]
license = "MIT"
readme = "../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
three-style-lib = "0.1.1"
wasm-bindgen = "0.2.91"
